Assignment 6 hits as time predictor

--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -2,25 +2,24 @@
 version = 1.0.0 (sortbenchmark)
 
 [helper]
-instrument = false
+#false
+instrument = true
 seed =
 cutoff =
 
 [instrumenting]
 # The options in this section apply only if instrument (in [helper]) is set to true.
-# this normally should be true
-showStats = true
-swaps = false
-compares = true
-copies = false
-hits = true
-# The following settings slow everything down a lot so keep fixes false and inversions small (or zero)
-fixes = false
+# This slows everything down a lot so keep this small (or zero)
 inversions = 0
+swaps = true
+compares = true
+copies = true
+fixes = true
+hits = true
 
 [benchmarkstringsorters]
 words = 1000
-runs = 1000
+runs = 20
 mergesort = true
 timsort = false
 quicksort = false
@@ -28,8 +27,9 @@ introsort = false
 insertionsort = false
 bubblesort = false
 quicksort3way = false
-quicksortDualPivot = false
+quicksortDualPivot = true
 randomsort = false
+heapsort = true
 
 [benchmarkdatesorters]
 timsort = false
@@ -37,14 +37,15 @@ n = 100000
 
 [mergesort]
 insurance = false
-nocopy = true
+nocopy = false
 
-[benchmarkintegersorters]
-shellsort = true
-mode = 3
-runs =
+[shellsort]
+n = 100000
 
 [operationsbenchmark]
 nlargest = 10000000
 repetitions = 10
 
+[quicksortDualPivot]
+
+[heapsort]
